<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PaM-Monitor</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <color name="black">#000000</color>

    <string name="waitForConText">Waiting for a connection to controller...</string>
    <string name="title_activity_monitor_main_screen">MonitorMainScreen</string>
    <color name="gray">#808080</color>
    <color name="bgray">#C0C0C0</color>
    <color name="lBlue">#ADD8E6</color>
    <color name="red">#FF0000</color>
    <color name="yellow">#FFFF00</color>
    <string name="OnButtonDesc">The main on button to start the monitor.</string>
    <string name="settingsTitle">Settings</string>
    <string name="statusBarTitle">Timer:   00:00</string>
    <string name="openCloseSettingsButtonTitle">Settings &gt;</string>
    <string name="openCloseDefiButtonTitle">&lt; Defibrillator</string>
    <string name="ekgTitle">EKG:</string>
    <string name="ekgValueDefault">- - -</string>
    <string name="ekgHeartDesc">Little heart-symbol which shows the pulses of the patients heart.</string>
    <string name="ibpTitle">RR:</string>
    <string name="ibpValueDefault">- - / - -</string>
    <string name="o2Title">SpO2:</string>
    <string name="o2ValueDefault">- -</string>
    <string name="co2Title">ETCO2:</string>
    <string name="co2ValueDefault">- -</string>
    <string name="nibpSettingsTitle">NIBP-Settings:</string>
    <string name="nibpStartButtonText">Start NIBP</string>
    <string name="nibpAutoButtonText">Start A.-NIBP</string>
    <string name="nibpParamTitle">NIBP:</string>
    <string name="nibpValueDefault">- - / - -</string>
    <string name="defiTitle">Defibrillator</string>
    <string name="unitMMHG">mmHg</string>
    <string name="unitPercent">%</string>
    <string name="nibpAutoTimeDefault">3 min</string>
    <string name="alarmDesc">Alarm-bell that signalizes if the alarm for the correspondig vital parameter is active.</string>
    <color name="white">#FFFFFF</color>
    <color name="blue">#0000FF</color>
    <color name="green">#00FF00</color>
    <string name="alarm">Alarm:</string>
    <string name="ekgSettigsButtonTitle">EKG</string>
    <string name="ibpSettigsButtonTitle">RR</string>
    <string name="o2SettigsButtonTitle">O2</string>
    <string name="co2SettigsButtonTitle">CO2</string>
    <color name="lightGray">#B2CCE5</color>
    <string name="colorSelectionTitle">Color:</string>
    <string name="settingsPointingArrowDesc">Little arrow that shows which settings are selected.</string>
    <string name="alarmSettingsTitle">Alarm:</string>
    <string name="OnOffButtonTitle">OFF</string>
    <string name="firstAlarmTitle">Frequency:</string>
    <string name="alarmUpperTH">Upper Threshold</string>
    <string name="firstAlarmUpperTHValueDefault">- - -</string>
    <string name="upButtonTitle">&gt;</string>
    <string name="downButtonTitle">&lt;</string>
    <string name="alarmLowerTH">Lower Threshold</string>
    <string name="firstAlarmLowerTHValueDefault">- - -</string>
    <string name="secondAlarmTitle">Diastolic:</string>
    <string name="secondAlarmUpperTHValueDefault">- - -</string>
    <string name="secondAlarmLowerTHValueDefault">- - -</string>
    <string name="soundSettingsTitle">Sound:</string>
    <string name="backColorSettingsTitle">Background:</string>
    <string name="ekgSoundDesc">Litte speaker that symbolizes if the ekg sound is turned on.</string>
    <string name="energy">Energie</string>
    <string name="defiChargeButton">Button to charge the defibrilator</string>
    <string name="defiButtonUp">Button to raise the defi energy</string>
    <string name="defiButtonDown">Button to lower the defi energy</string>
    <string name="defiChargeText">Laden</string>
    <string name="defiDischargeButton">Button to decharge the defibrilator</string>
    <string name="defiDischargeText">Entladen</string>
    <string name="defiShockButton">Button to trigger a shock</string>
    <string name="startEnergy">100 J</string>
    <string name="afValueDefault">- -</string>
    <string name="afTitle">AF:</string>
    <string name="mainSoundOnOffButtonTitle">QRS    </string>
    <string name="mainAlarmOnOffButtonTitle">Alarm    </string>
    <string name="alarmPauseButtonTitle">Pause Alarm</string>
    <string name="enterIP">Please enter controller IP</string>
    <string name="done">Done</string>
    <string name="conNameText">The session name is: \"PaM_Session\"</string>
    <string name="change">Change</string>
</resources>
