<!-- Main-Layout of the EnterScreen -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="monitor.pack.EnterScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />
    
    <!-- Layout for entering the controller ip. Height controlled with weight-factor. -->
   	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	   	android:layout_weight="2">


    	<EditText
    	    android:id="@+id/ipEditText"
    	    android:inputType="phone"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerVertical="true"
    	    android:layout_centerInParent="true"
    	    android:hint="@string/enterIP"
    	    android:ems="11"/>

    	<Button
    	    android:id="@+id/ipDoneButton"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_toRightOf="@+id/ipEditText"
    	    android:layout_centerVertical="true"
    	    android:text="@string/done"
    	    android:onClick="ipEnterDone" />
    	
    </RelativeLayout>
    
    <!-- Layout with the main on-button. Height controlled with weight-factor. -->
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	   	android:layout_weight="2">
	    	

		<ImageButton
		    android:id="@+id/onButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:adjustViewBounds="true"
		    android:scaleType="centerInside"
		    android:background="@null"
		    android:src="@drawable/onbuttonr_gray"
		    android:contentDescription="@string/OnButtonDesc"
		    android:onClick="openMonitorMain" />
	        
	</RelativeLayout>
    
    <!-- Layout with the for the "waiting for a connection"-progressBar. Height controlled with weight-factor. -->	
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	   	android:layout_weight="2">
		
		<ProgressBar
			android:id="@+id/waitForConProgressBar"
		    style="?android:attr/progressBarStyleLarge"
		    android:layout_centerInParent="true"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	    
	        
	</RelativeLayout>
	
    
    <!-- Layout with the for the "waiting for a connection"-textView. Height controlled with weight-factor. -->
   	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	   	android:layout_weight="1">

		    <TextView
		        android:id="@+id/waitForConTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:layout_alignParentTop="true"
		        android:text="@string/waitForConText"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

	        
	</RelativeLayout>
    
    <!-- Layout for the session name section. Height controlled with weight-factor. -->
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	   	android:layout_weight="1">

		    <TextView
		        android:id="@+id/conNameTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:text="@string/conNameText"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		    
		    <Button
	    	    android:id="@+id/changeConNameButton"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_toRightOf="@+id/conNameTextView"
	    	    android:layout_centerInParent="true"
	    	    android:layout_marginLeft="20dp"
	    	    android:text="@string/change"
	    	    android:onClick="changeSessionName" />
	        
	</RelativeLayout>

</LinearLayout>
